--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -1,100 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link
-    rel="preload"
-    href="./fonts/barlow-semi-condensed-v16-latin-500.woff2"
-    as="font"
-    type="font/woff2"
-    crossorigin
-  />
-  <link
-    rel="preload"
-    href="./fonts/barlow-semi-condensed-v16-latin-600.woff2"
-    as="font"
-    type="font/woff2"
-    crossorigin
-  />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="preload" href="./fonts/barlow-semi-condensed-v16-latin-500.woff2" as="font" type="font/woff2" crossorigin />
+  <link rel="preload" href="./fonts/barlow-semi-condensed-v16-latin-600.woff2" as="font" type="font/woff2" crossorigin />
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
-  
+
   <title>Frontend Mentor | Testimonials Grid</title>
-
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+
   <div class="grid-container">
-    <div class="grid-container__grid-1">
-        Daniel Clifford
-        Verified Graduate
 
-        I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-        in the company I joined. I honestly feel I got every penny’s worth.
+    <!-- ITEM 1 -->
+    <div class="grid-container__item grid-container__item--1">
 
-        “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
-        transition and have heard some people who had an amazing experience here. I signed up 
-        for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
-        The next 12 weeks was the best - and most grueling - time of my life. Since completing 
-        the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
+      <div class="grid-container__details">
+        <img src="./images/image-daniel.jpg" alt="Daniel Clifford" class="grid-container__avatar  grid-container__avatar--1">
+
+        <div class="grid-container__identity">
+          <p class="grid-container__name">Daniel Clifford</p>
+          <p class="grid-container__verified">Verified Graduate</p>
+        </div>
+      </div>
+      <img src="./images/bg-pattern-quotation.svg" alt="" class="grid-container__bg-pattern">
+
+      <h3 class="grid-container__heading grid-container__heading--1">
+        I received a job offer mid-course, and the subjects I learned were current, 
+        if not more so, in the company I joined. I honestly feel I got every penny’s worth.
+      </h3>
+
+      <p class="grid-container__message">
+        “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to 
+        make a transition and have heard some people who had an amazing experience here. 
+        I signed up for the free intro course and found it incredibly fun! I enrolled shortly 
+        thereafter. The next 12 weeks was the best—and most grueling—time of my life. 
+        Since completing the course, I’ve successfully switched careers, working as a 
+        Software Engineer at a VR startup. ”
+      </p>
+
     </div>
 
-    <div class="grid-container__grid-2">
-        Jonathan Walters
-        Verified Graduate
+    <!-- ITEM 2 -->
+    <div class="grid-container__item grid-container__item--2">
 
+      <div class="grid-container__details">
+        <img src="./images/image-jonathan.jpg" alt="Jonathan Walters" class="grid-container__avatar  grid-container__avatar--2">
+
+        <div class="grid-container__identity grid-container__identity--2">
+          <p class="grid-container__name grid-container__name--2">Jonathan Walters</p>
+          <p class="grid-container__verified">Verified Graduate</p>
+        </div>
+      </div>
+
+      <h3 class="grid-container__heading grid-container__heading--2">
         The team was very supportive and kept me motivated
+      </h3>
 
-        “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
-        for a big company. This was one of the best investments I’ve made in myself. ”
-    </div>
-
-    <div class="grid-container__grid-3">
-
-      Jeanette Harmon
-      Verified Graduate
-
-      An overall wonderful and rewarding experience
-
-      “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
-      while doing something I love. ”
+      <p class="grid-container__message grid-container__message--2">
+        “ I started as a total newbie with virtually no coding skills. I now work as 
+        a mobile engineer for a big company. This was one of the best investments 
+        I’ve made in myself. ”
+      </p>
 
     </div>
 
-    <div class="grid-container__grid-4">
+    <!-- ITEM 3 -->
+    <div class="grid-container__item grid-container__item--3">
 
-        Patrick Abrams
-        Verified Graduate
+      <div class="grid-container__details">
+        <img src="./images/image-kira.jpg" alt="Kira Whittle" class="grid-container__avatar grid-container__avatar--3">
 
-        Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-        learning from their experiences was easy.
+        <div class="grid-container__identity">
+          <p class="grid-container__name">Kira Whittle</p>
+          <p class="grid-container__verified">Verified Graduate</p>
+        </div>
+      </div>
 
-        “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
-        gave me the confidence necessary to be able to go out in the world and present myself as a capable 
-        junior developer. The standard is above the rest. You will get the personal attention you need from 
-        an incredible community of smart and amazing people. ”
-
-    </div>
-
-    <div class="grid-container__grid-5">
-        Kira Whittle
-        Verified Graduate
-
+      <h3 class="grid-container__heading">
         Such a life-changing experience. Highly recommended!
+      </h3>
 
-        “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
-        professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
-        student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
-        did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
-        project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
-        could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
-        experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
-        100% recommend! ”
+      <p class="grid-container__message grid-container__message--3">
+      Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals who can help me learn 
+      programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the 
+      program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance.
+       The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact,
+        I’ve often referred to it during interviews as an example of my development experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100% recommend! ”
+      </p>
+
     </div>
+
+    <!-- ITEM 4 -->
+    <div class="grid-container__item grid-container__item--4">
+
+      <div class="grid-container__details">
+        <img src="./images/image-jeanette.jpg" alt="Jeanette Harmon" class="grid-container__avatar  grid-container__avatar--4">
+
+        <div class="grid-container__identity grid-container__identity--4">
+          <p class="grid-container__name ">Jeanette Harmon</p>
+          <p class="grid-container__verified">Verified Graduate</p>
+        </div>
+      </div>
+
+      <h3 class="grid-container__heading">
+        An overall wonderful and rewarding experience
+      </h3>
+
+      <p class="grid-container__message">
+        “ Thank you for the wonderful experience! I now have a job I really enjoy, 
+        and make a good living while doing something I love. ”
+      </p>
+
+    </div>
+
+    <!-- ITEM 5 -->
+    <div class="grid-container__item grid-container__item--5">
+
+      <div class="grid-container__details">
+        <img src="./images/image-patrick.jpg" alt="Patrick Abrams" class="grid-container__avatar  grid-container__avatar--5">
+
+        <div class="grid-container__identity">
+          <p class="grid-container__name">Patrick Abrams</p>
+          <p class="grid-container__verified">Verified Graduate</p>
+        </div>
+      </div>
+
+      <h3 class="grid-container__heading">
+        Awesome teaching support from TAs who did the bootcamp themselves.
+        Getting guidance from them and learning from their experiences was easy.
+      </h3>
+
+      <p class="grid-container__message">
+        “ The staff seem genuinely concerned about my progress which I find 
+        really refreshing. The program gave me the confidence necessary to go 
+        out in the world and present myself as a capable junior developer. 
+        The standard is above the rest. You will get the personal attention 
+        you need from an incredible community of smart and amazing people. ”
+      </p>
+
+    </div>
+
   </div>
 
 </body>
